--- a/tjc-powerpoint/package.json
+++ b/tjc-powerpoint/package.json
@@ -3,7 +3,7 @@
   "productName": "tjc-powerpoint",
   "version": "1.0.0",
   "description": "My Electron application description",
-  "main": "src/index.js",
+  "main": "src/scripts/index.js",
   "scripts": {
     "start": "electron-forge start",
     "package": "electron-forge package",
