--- a/tjc-powerpoint/package.json
+++ b/tjc-powerpoint/package.json
@@ -18,6 +18,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.2",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
