--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "boostrap": "^2.0.0",
-    "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.2",
     "electron-squirrel-startup": "^1.0.0"
   },
   "devDependencies": {
@@ -30,6 +27,9 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "electron": "28.0.0"
+    "autoprefixer": "^10.4.18",
+    "electron": "28.0.0",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^3.4.1"
   }
 }
