--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "lint": "echo \"No linting configured\"",
+    "test": "jest --verbose ../src/tests"
   },
   "keywords": [],
   "author": {
@@ -29,6 +30,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "autoprefixer": "^10.4.18",
     "electron": "28.0.0",
+    "jest": "^29.7.0",
     "postcss-loader": "^8.1.1",
     "tailwindcss": "^3.4.1"
   }
