--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "electron": "28.0.0",
     "jest": "^29.7.0",
     "postcss-loader": "^8.1.1",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.1"
   }
 }
