--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "flowbite": "^2.3.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
